fix: prevent album names from overflowing

--- a/components/navigation/styles/nav-bar.css
+++ b/components/navigation/styles/nav-bar.css
@@ -7,7 +7,7 @@
   grid-template-columns: 200px 100px;
   grid-template-rows: 1fr 1fr;
   row-gap: 0.5rem;
-  width: 350px;
+  max-width: 24rem;
 }
 
 .woh__nav-bar-string {
